@@ -1,7 +1,7 @@
 %---------------------------------------------------------------------------%
 % vim: ft=mercury ts=4 sw=4 et wm=0 tw=0
 %---------------------------------------------------------------------------%
-% Copyright (C) 1993-2006 The University of Melbourne.
+% Copyright (C) 1993-2007 The University of Melbourne.
 % This file may only be copied under the terms of the GNU Library General
 % Public License - see the file COPYING.LIB in the Mercury distribution.
 %---------------------------------------------------------------------------%
@@ -121,6 +121,7 @@
 :- import_module term.
 :- import_module term_io.
 :- import_module term_to_xml.
+:- import_module thread.
 :- import_module time.
 :- import_module tree234.
 :- import_module tree_bitset.
@@ -275,6 +276,7 @@ mercury_std_library_module("term_io").
 mercury_std_library_module("term_size_prof_builtin").
 mercury_std_library_module("term_to_xml").
 mercury_std_library_module("time").
+mercury_std_library_module("thread").
 mercury_std_library_module("tree234").
 mercury_std_library_module("tree_bitset").
 mercury_std_library_module("type_desc").
